Fixed Alignments

--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,34 @@
 body {
-    background: url(cake.jpg);
-    background-size: cover;
-    text-align: center;
-    /* opacity: 0.5;
-    z-index: -1; */
+  background-size: cover;
+  text-align: center;
   }
 
 .container {
-    background: #fff;
-    /* border: dashed; */
-    /* border-color: #a0aeba; */
-    border-radius: 5px;
-    padding: 2.5em;
-    margin: auto;
-    width: 15%;
-    box-shadow: 0px 0px 15px #545454;
-    text-align: center;
-    position: absolute;
-    top: 5%;
+  background: #fff;
+  border-radius: 5px;
+  padding: 2.5em;
+  margin: auto;
+  width: 15%;
+  box-shadow: 0px 0px 15px #545454;
+  text-align: center;
+  position: absolute;
+  top: 5%;
+}
+
+.logInBox {
+  display: block;
+  position: absolute;
+  top: 20%;
+  left: 42.5%;
 }
 
 h1 {
-    font-family: system-ui;
-    text-align:center;
-    position: relative;
-    top: 50px;
-    margin-bottom: 3em;
-    color: #7a08fa;
+  font-family: system-ui;
+  text-align:center;
+  position: relative;
+  top: 50px;
+  margin-bottom: 3em;
+  color: #7a08fa;
 }
 
 h2 {
